0.4.4
  - No longer display all found class/module documentation found. If core
  documentation is available, output only that, otherwise falls back to gem
  documentation. To show all found documentation use the --all command line
  paramter.

0.4.3
  - If multiple documentations are found that are all class documentations,
    display all of these. This is useful in cases that gems extend core 
    classes e.g. ActiveSupport.
  - Reduce the amount of vertical whitespace caused by rendering empty rdoc nodes

0.4.2
  - Fix broken --list-names option
  - Fix broken multiple choice display
  - Remove comma separators from method lists in order to ease copy and paste
  actions
  - List multiple choices one per line for easier visual searching
  - More internal cleanups
  - Add caveat to the readme

0.4.1
  - Modernize and refactor code
  - Show extends of classes in rendered documentation
  - Show superclass of classes in rendered documentation

0.4.0
  - Update gems to their current versions
  - Require ruby 2.6 or later
  - Fix code and specs to work with current rspec and rdoc

0.2.1
  - Show origin of class/method in description output
  - Better textflow within paragraphs by ignoring the original newlines
  - But keep original newlines within list items
  - Add missing newline after verbatim sections

0.2.0
  - Add extensive specs for matching, searching and rendering
  - Fix bug with rendering very narrow horizontal rules
  - Fix bug with wrong color for +monospaced+ vs <tt>monospaced</tt> styles
  - Recognize <tt> as an alias for <code>
  - Recognize <i> as an alias for <em>
  - Add ANSI bold sequences for *bold* and <b>bold</b> text
  - Add recognition and styling of links
  - Correctly indent the second and further parts of a list item
  - Correctly display lettered lists
  - Correctly display aligned labeled lists
  - Allow escaping of \<html> tags
  - Be more robust when missing encountering a missing ri file reference

0.1.5